fix spacing, content (again, thanks edward)

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,6 +12,10 @@ body {
   padding: 0;
 }
 
+.follow {
+  margin-top: 5px;
+}
+
 @media print {
   .container {
     width: auto;
